# k-browser

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  Dockerfile  KITSUNE_MVP_ROADMAP.md  KitsuneEngine_Demo_Video.html  README.md  build-installer.ps1  gen_icon.py  index.html  kitsune-mvp.html  render.yaml
crates/kitsune-agent/: Cargo.toml
crates/kitsune-agent-builder/: Cargo.toml
crates/kitsune-agent-builder/src/: builder.rs  lib.rs  templates.rs  validation.rs
crates/kitsune-agent/src/: action.rs  ai_client.rs  budget.rs  captcha.rs  dom_access.rs  dom_observer.rs  error.rs  executor.rs  lib.rs  loop_runtime.rs  ollama_client.rs  orchestrator.rs  profile.rs  runtime.rs  spec.rs  tools.rs
crates/kitsune-agent/src/agents/: booking.rs  form.rs  mod.rs  search.rs  submit.rs
crates/kitsune-agent/src/swarm/: coordinator.rs  mod.rs  reconciler.rs  types.rs  worker.rs
crates/kitsune-agent/tests/: ai_client.rs  booking_agent.rs  captcha.rs  dom_access.rs  executor.rs  form_agent.rs  orchestrator.rs  profile.rs  search_agent.rs  submit_agent.rs
crates/kitsune-ai/: Cargo.toml
crates/kitsune-ai/src/: cloud.rs  error.rs  lib.rs  local.rs  quota.rs  request.rs  router.rs  tuning.rs
crates/kitsune-ai/tests/: cloud.rs  local.rs
crates/kitsune-cef/: Cargo.toml  build.rs  wrapper.h
crates/kitsune-cef/src/: cef_call.rs  client.rs  error.rs  lib.rs  life_span_handler.rs
crates/kitsune-cloud-mock/: Cargo.toml
crates/kitsune-cloud-mock/src/: agent_brain.rs  lib.rs  main.rs  pages.rs
crates/kitsune-cloud-mock/static/: index.html
crates/kitsune-core/: COMPAT.md  Cargo.toml
crates/kitsune-core/src/: broker.rs  config.rs  engine.rs  lib.rs  navigation.rs  pipeline.rs  tab.rs
crates/kitsune-core/tests/: broker.rs  perf.rs  resilience.rs
crates/kitsune-css/: Cargo.toml
crates/kitsune-css/src/: cascade.rs  lib.rs  selector.rs  style_engine.rs  stylesheet.rs  values.rs
crates/kitsune-css/tests/: selectors.rs
crates/kitsune-hil/: Cargo.toml
crates/kitsune-hil/src/: approval.rs  error.rs  gate.rs  lib.rs  presentation.rs  trigger.rs
crates/kitsune-html/: Cargo.toml
crates/kitsune-html/src/: dom.rs  error.rs  lib.rs  parser.rs
crates/kitsune-ipc/: Cargo.toml
crates/kitsune-ipc/src/: bus.rs  channel.rs  error.rs  lib.rs  message.rs  scratch.rs  transport.rs
crates/kitsune-js/: Cargo.toml
crates/kitsune-js/src/: engine.rs  error.rs  lib.rs
crates/kitsune-js/tests/: engine.rs
crates/kitsune-layout/: Cargo.toml
crates/kitsune-layout/src/: box_model.rs  engine.rs  flex.rs  grid.rs  layout_tree.rs  lib.rs
crates/kitsune-net/: Cargo.toml  refactor_client.py
crates/kitsune-net/src/: client.rs  error.rs  lib.rs  privacy.rs
crates/kitsune-render/: Cargo.toml
crates/kitsune-render/src/: backend.rs  images.rs  lib.rs  painter.rs  pipeline.rs  pipelines.rs  text.rs
crates/kitsune-sandbox/: Cargo.toml
crates/kitsune-sandbox/src/: error.rs  lib.rs  policy.rs  windows.rs
crates/kitsune-sandbox/tests/: job_object.rs
crates/kitsune-ui/: Cargo.toml
crates/kitsune-ui/assets/pages/: privacy.html  welcome.html
crates/kitsune-ui/assets/pages/demo/: shop.html
crates/kitsune-ui/src/: animation.rs  app.rs  hil_window.rs  lib.rs  main.rs  theme.rs
crates/kitsune-ui/src/chrome/: mod.rs  tab_bar.rs  top_bar.rs
crates/kitsune-ui/src/dialogs/: downloads_dialog.rs  hil_dialog.rs  mod.rs  settings_dialog.rs
crates/kitsune-ui/src/panels/: agent_card.rs  agent_panel.rs  devtools.rs  mod.rs  privacy_dashboard.rs  profile_panel.rs  session_panel.rs  settings.rs  task_graph_panel.rs  vault_manager.rs
crates/kitsune-ui/src/widgets/: agent_shelf.rs  mod.rs  nav_bar.rs  tab_bar.rs
crates/kitsune-ui/tests/: agent_shelf.rs  demo_flow.rs  onboarding.rs
crates/kitsune-vault/: Cargo.toml
crates/kitsune-vault/src/: access.rs  audit.rs  backend.rs  crypto.rs  db.rs  error.rs  lib.rs  policy.rs  site_isolation.rs  types.rs
docs/superpowers/plans/: 2026-05-10-agent-swarm.md  2026-05-10-agentic-pipeline.md  2026-05-10-universal-api-provider.md
docs/superpowers/specs/: 2026-05-10-agentic-pipeline-design.md  2026-05-10-universal-api-provider-design.md
wix/: main.wxs
