[package]
name = "kitsune-agent-builder"
description = "No-code agent configuration and serialization for KitsuneEngine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

kitsune-agent = { path = "../kitsune-agent" }
kitsune-hil = { path = "../kitsune-hil" }
kitsune-vault = { path = "../kitsune-vault" }
