[package]
name = "kitsune-agent"
description = "AI agent runtime and safety enforcement for KitsuneEngine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
enumset = { workspace = true }
semver = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }
pdf-extract = "0.7"
docx-rs = "0.4"
urlencoding = "2"

kitsune-vault = { path = "../kitsune-vault" }
kitsune-hil = { path = "../kitsune-hil" }
kitsune-ipc = { path = "../kitsune-ipc" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
