[package]
name = "kitsune-cef"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror = { workspace = true }
raw-window-handle = "0.6"
wry = { version = "0.38.2", default-features = false }
dirs = { workspace = true }

