[package]
name = "kitsune-cloud-mock"
description = "Local mock HTTP server for the KitsuneEngine investor demo"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kitsune-cloud-mock"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
