[package]
name = "kitsune-cloud-mock"
description = "Local mock HTTP server for the KitsuneEngine investor demo"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kitsune-cloud-mock"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
futures = "0.3"
async-stream = "0.3"
urlencoding = "2"
