[package]
name = "kitsune-css"
description = "CSS cascade and styling engine for KitsuneEngine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cssparser = { workspace = true }
selectors = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

markup5ever = { workspace = true }
precomputed-hash = "0.1"
kitsune-html = { path = "../kitsune-html" }
rayon = "1.10"
dashmap = { workspace = true }
