[package]
name = "kitsune-html"
description = "HTML5 parser for KitsuneEngine (html5ever-compatible interface)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
html5ever = { workspace = true }
markup5ever = { workspace = true }
markup5ever_rcdom = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
