[package]
name = "kitsune-js"
description = "JavaScript engine bridge for KitsuneEngine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }

kitsune-ipc = { path = "../kitsune-ipc" }
v8 = { workspace = true }
kitsune-html = { path = "../kitsune-html" }
