[package]
name = "kitsune-layout"
description = "Box model, flexbox, and grid layout engine for KitsuneEngine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

kitsune-css = { path = "../kitsune-css" }
kitsune-html = { path = "../kitsune-html" }
taffy = { workspace = true }
