[package]
name = "kitsune-net"
description = "Privacy-first networking layer (TLS 1.3+, HTTP/2) for KitsuneEngine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["rustls-tls", "gzip", "brotli", "stream", "cookies"], default-features = false }
cookie_store = "0.21"
rustls = { workspace = true }
url = { workspace = true }
hyper = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }
