[package]
name = "kitsune-render"
description = "GPU rendering engine via wgpu for KitsuneEngine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wgpu = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

kitsune-layout = { path = "../kitsune-layout" }
kitsune-css = { path = "../kitsune-css" }
kitsune-ipc = { path = "../kitsune-ipc" }
cosmic-text = "0.12"
image = { workspace = true }
url = { workspace = true }
