[package]
name = "kitsune-ui"
description = "Native UI shell for KitsuneEngine (egui-based)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }
keyring = "3"
dirs = { workspace = true }
raw-window-handle = "0.6"
anyhow = "1"
image = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
futures = "0.3"
urlencoding = "2"

kitsune-core = { path = "../kitsune-core" }
kitsune-vault = { path = "../kitsune-vault" }
kitsune-agent = { path = "../kitsune-agent" }
kitsune-agent-builder = { path = "../kitsune-agent-builder" }
kitsune-hil = { path = "../kitsune-hil" }
kitsune-net = { path = "../kitsune-net" }
kitsune-ipc = { path = "../kitsune-ipc" }
kitsune-ai = { path = "../kitsune-ai" }
kitsune-cef = { path = "../kitsune-cef" }
kitsune-cloud-mock = { path = "../kitsune-cloud-mock" }

[[bin]]
name = "kitsune"
path = "src/main.rs"

[package.metadata.winres]
OriginalFilename = "kitsune.exe"
FileDescription = "KitsuneEngine Browser"
LegalCopyright = "Apache 2.0"
